--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com
-        <i class="material-icons red v-middle">
+        <i class="material-icons v-middle red"  >
             favorite
         </i>
         Por <strong>hpzynha</strong>
     </span>
+    
 </mat-toolbar>
