--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
-        <a>
+        <a routerLink="/">
             <img class="logo" src="assets/img/logo.png" alt="logo">
         </a>
     </span>
@@ -9,8 +9,9 @@
             <i class="material-icons">
                 home
             </i>
-            Aplicação CRUD
+            Início
         </a>
+        
 
     </span>
 </mat-toolbar>
